tests/parser/fail/02-rewind-expression-missing-else.nx
fn broken() {
    let result = rewind to "payment"
}
